Ajoute la page des `conditions générales d’utilisation`

--- a/front/_includes/footer.html
+++ b/front/_includes/footer.html
@@ -27,7 +27,7 @@
       <hr/>
       <a href="/confidentialite" class="lien">Politique de confidentialité</a>
       <hr/>
-      <a href="#a" class="lien">Conditions générales</a>
+      <a href="/cgu" class="lien">Conditions générales</a>
       <hr/>
       <a href="#a" class="lien">Statistiques d'utilisation</a>
     </div>
