--- a/front/assets/styles/connexion.scss
+++ b/front/assets/styles/connexion.scss
@@ -4,8 +4,47 @@
 @import "responsive";
 
 
-section.connexion > .contenu-section {
-    padding: 40px 0;
+section.connexion {
+    padding: 48px 16px;
+    text-align: center;
+
+    .contenu-section {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        gap: 24px;
+
+        h1 {
+            font-size: 32px;
+            line-height: 40px;
+            font-weight: bold;
+            margin: 0;
+        }
+
+        p {
+            margin: 0;
+            font-size: 18px;
+            font-weight: 400;
+            line-height: 28px;
+        }
+
+        .conteneur-proconnect {
+            padding: 16px 0;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 12px;
+        }
+
+        @include a-partir-de(md) {
+            max-width: 544px;
+
+            h1 {
+                font-size: 40px;
+                line-height: 48px;
+            }
+        }
+    }
 }
 
 .proconnect-sr-only {
