Ajoute la page de `déclaration d’accessibilité`

--- a/front/_includes/footer.html
+++ b/front/_includes/footer.html
@@ -30,6 +30,8 @@
       <a href="/cgu" class="lien">Conditions générales</a>
       <hr/>
       <a href="#a" class="lien">Statistiques d'utilisation</a>
+      <hr/>
+      <a href="/accessibilite" class="lien">Accessibilité : non conforme</a>
     </div>
   </div>
 </footer>
