--- a/front/assets/styles/page-statique.scss
+++ b/front/assets/styles/page-statique.scss
@@ -16,6 +16,12 @@
       line-height: 2rem;
       margin-bottom: 16px;
     }
+
+    a {
+      color: white;
+      text-decoration: underline;
+      display: inline;
+    }
   }
 }
 
@@ -125,7 +131,7 @@
         font-size: 0.875rem;
         line-height: 1.5rem;
 
-        @include a-partir-de(sm){
+        @include a-partir-de(sm) {
           display: table-cell;
         }
 
@@ -140,7 +146,8 @@
       }
 
       @include a-partir-de(sm) {
-        td, th {
+        td,
+        th {
           border: 1px solid #929292;
           padding: 12px 24px;
           text-align: left;
