--- a/front/assets/styles/connexion.scss
+++ b/front/assets/styles/connexion.scss
@@ -8,40 +8,71 @@ section.connexion {
     padding: 48px 16px;
     text-align: center;
 
-    .contenu-section {
+    @include a-partir-de(lg) {
+        padding: 0;
+    }
+
+    .contenu-principal {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        gap: 24px;
+        justify-content: center;
 
-        h1 {
-            font-size: 32px;
-            line-height: 40px;
-            font-weight: bold;
-            margin: 0;
-        }
-
-        p {
-            margin: 0;
-            font-size: 18px;
-            font-weight: 400;
-            line-height: 28px;
-        }
-
-        .conteneur-proconnect {
-            padding: 16px 0;
+        & > div {
             display: flex;
             flex-direction: column;
             align-items: center;
-            gap: 12px;
-        }
-
-        @include a-partir-de(md) {
-            max-width: 544px;
+            gap: 24px;
 
             h1 {
-                font-size: 40px;
-                line-height: 48px;
+                font-size: 32px;
+                line-height: 40px;
+                font-weight: bold;
+                margin: 0;
+            }
+
+            p {
+                margin: 0;
+                font-size: 18px;
+                font-weight: 400;
+                line-height: 28px;
+            }
+
+            .conteneur-proconnect {
+                padding: 16px 0;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                gap: 12px;
+            }
+
+            @include a-partir-de(md) {
+                max-width: 544px;
+
+                h1 {
+                    font-size: 40px;
+                    line-height: 48px;
+                }
+            }
+        }
+    }
+
+    @include a-partir-de(lg) {
+        .contenu-section {
+            display: flex;
+            flex-direction: row;
+            margin: 0;
+            max-width: unset;
+
+            .contenu-principal {
+                flex: 1;
+                align-self: stretch;
+                justify-content: center;
+                align-items: center;
+                padding: 178px 0;
+            }
+
+            .contenu-secondaire {
+                flex: 1;
+                background: #0d0c21 url("/assets/images/motif-fond-service-opacite-16.png");
             }
         }
     }
