--- a/front/_includes/script-matomo.html
+++ b/front/_includes/script-matomo.html
@@ -6,9 +6,7 @@
     (function() {
       var u = 'https://stats.beta.gouv.fr/';
       _paq.push(['setTrackerUrl', u + 'matomo.php']);
-      _paq.push(['setSiteId', {{ site.env.MATOMO_ID }
-    }])
-      ;
+      _paq.push(['setSiteId', {{ site.env.MATOMO_ID }} ]);
       var d = document, g = d.createElement('script'), s = d.getElementsByTagName('script')[0];
       g.async = true;
       g.src = u + 'matomo.js';
