Ajoute le formulaire de création de compte
... et les éléments d'interface associés

--- a/front/_includes/head.html
+++ b/front/_includes/head.html
@@ -12,6 +12,7 @@
   <link rel="stylesheet" href="{{ "/assets/styles/site.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/styles/boutons.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/styles/fonts.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/assets/styles/ui.css" | relative_url }}">
   {% if include.extra-css %}
     <link rel="stylesheet" href="{{ include.extra-css | relative_url }}">
   {% endif %}
