--- a/front/_includes/head.html
+++ b/front/_includes/head.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="{{ "/assets/styles/site.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/styles/boutons.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/styles/fonts.css" | relative_url }}">
-  <link rel="stylesheet" href="{{ "/assets/styles/ui.css" | relative_url }}">
+  <link rel="stylesheet" href="{{ "/lib-svelte/dist/assets/style.css" | relative_url }}">
   {% if include.extra-css %}
     <link rel="stylesheet" href="{{ include.extra-css | relative_url }}">
   {% endif %}
