[CORRECTION] Utilise un `script` pour Matomo
... afin d'éviter les problèmes CSP de "inline-script"

--- a/front/_layouts/defaut.html
+++ b/front/_layouts/defaut.html
@@ -4,7 +4,7 @@
 <body>
 
 {% if site.env.MATOMO_ID != '' and site.env.MATOMO_ID != undefined %}
-    {% include script-matomo.html %}
+    <script type='module' src='/scripts/matomo.js' data-id-site-matomo="{{ site.env.MATOMO_ID }}" id="script-matomo"></script>
 {% endif %}
 {% if site.env.MATOMO_URL_TAG_MANAGER != '' and site.env.MATOMO_URL_TAG_MANAGER != undefined %}
     {% include script-matomo-tag-manager.html %}
