Ajoute une classe pour les boutons des fiches produit qui pointe vers un lien externe

--- a/front/_layouts/service.html
+++ b/front/_layouts/service.html
@@ -18,7 +18,7 @@ script: /scripts/service.js
         <span class="badge service">Service</span>
         <h1>{{page.nom}}</h1>
         <p>{{page.description}}</p>
-        <a href="{{page.lien}}" target="_blank" class="bouton primaire">Accéder au service</a>
+        <a href="{{page.lien}}" target="_blank" class="bouton primaire lien-externe-produit">Accéder au service</a>
       </div>
       <div>
         <img src="/assets/images/illustrations-services/{{ page.illustration }}" alt="Capture d’écran"/>
@@ -71,7 +71,7 @@ script: /scripts/service.js
         <img src="/assets/images/illustrations-services/{{ page.illustration }}" alt="Capture d’écran"/>
         <h2>De quoi s'agit-il&nbsp;?</h2>
         <div>{{ page.content }}</div>
-        <a href="{{page.lien}}" target="_blank" class="bouton primaire">Accéder au service</a>
+        <a href="{{page.lien}}" target="_blank" class="bouton primaire lien-externe-produit">Accéder au service</a>
       </section>
 
       <section class="cible" id="cible">
