Corrige les "warnings" de compilation lié à des règles de SCSS dépréciées

--- a/front/assets/styles/page-statique.scss
+++ b/front/assets/styles/page-statique.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import 'responsive';
+@use "../../assets/styles/responsive" as *;
 
 .chapeau.fond-sombre.chapeau-page-statique {
   padding: 32px var(--gouttiere);
