--- a/front/assets/styles/accueil.scss
+++ b/front/assets/styles/accueil.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@import "responsive";
+@use "../../assets/styles/responsive" as *;
 
 section {
   padding: 48px var(--gouttiere) !important;
