Ajoute un `data-source` sur les liens externes de Produit
... afin de les utiliser dans Matomo

--- a/front/assets/styles/catalogue.scss
+++ b/front/assets/styles/catalogue.scss
@@ -321,6 +321,10 @@
   width: auto;
 }
 
+.carte.service.lien-externe-produit > * {
+  pointer-events: none;
+}
+
 .encart.fond-clair {
   background: white;
 
