Modifie le "handler" du click du bouton
... pour ne pas utiliser un `script-src-attr`

--- a/front/_layouts/service.html
+++ b/front/_layouts/service.html
@@ -82,7 +82,7 @@ script: /scripts/service.js
           {% for lien in page.liens %}
           <div class="carte lien {% if lien.video %}video{% endif %}">
             {% if lien.video %}
-            <button onclick="ouvreModaleVideo('{{lien.lien}}')">
+            <button class="ouverture-modale" data-lien-video="{{lien.lien}}">
               {% else %}
               <a href="{{ lien.lien }}" target="_blank">
                 {% endif %}
