--- a/front/_layouts/defaut.html
+++ b/front/_layouts/defaut.html
@@ -18,6 +18,7 @@
 <main>
     {% include header.html %}
     {{ content }}
+    {% include centre-aide.html %}
     {% include footer.html %}
 </main>
 </body>
