--- a/front/assets/styles/test-maturite.scss
+++ b/front/assets/styles/test-maturite.scss
@@ -305,6 +305,7 @@ section {
 }
 
 .repartition {
+  border-top: 1px solid var(--gris-clair);
   .contenu-section {
     h2 {
       font-size: 1.75rem;
