--- a/front/assets/styles/test-maturite.scss
+++ b/front/assets/styles/test-maturite.scss
@@ -1,7 +1,7 @@
 ---
 ---
 
-@use "../../assets/styles/responsive" as *;
+@use '../../assets/styles/responsive' as *;
 
 p,
 h1,
@@ -216,7 +216,7 @@ section {
     }
 
     &:before {
-      content: "";
+      content: '';
       display: block;
       min-width: 6px;
       position: absolute;
@@ -241,7 +241,7 @@ section {
 }
 
 .pour-aller-plus-loin {
-  background: #0d0c21 url("/assets/images/motif-fond-service-opacite-16.png");
+  background: #0d0c21 url('/assets/images/motif-fond-service-opacite-16.png');
   color: white;
 
   h2 {
@@ -306,6 +306,7 @@ section {
 
 .repartition {
   border-top: 1px solid var(--gris-clair);
+
   .contenu-section {
     h2 {
       font-size: 1.75rem;
@@ -374,7 +375,7 @@ section {
   justify-content: center;
 
   &:before {
-    content: "";
+    content: '';
     display: block;
     width: 1px;
   }
@@ -456,7 +457,7 @@ section {
       background: #fff7db;
 
       &:after {
-        content: "";
+        content: '';
         display: block;
         position: absolute;
         top: -4px;
@@ -469,7 +470,7 @@ section {
     }
 
     &:before {
-      content: "";
+      content: '';
       position: absolute;
       z-index: 0;
       bottom: 94px;
@@ -481,7 +482,7 @@ section {
 }
 
 .votre-parcours {
-  background: var(--jaune-msc) url("/assets/images/motif-fond-opacite-30.png");
+  background: var(--jaune-msc) url('/assets/images/motif-fond-opacite-30.png');
 
   .tuile {
     background: white;
@@ -491,19 +492,19 @@ section {
     grid-template-columns: auto;
     grid-template-rows: auto;
     grid-template-areas:
-      "illustration"
-      "titre"
-      "contenu"
-      "bouton";
+      'illustration'
+      'titre'
+      'contenu'
+      'bouton';
     border-bottom: 6px solid var(--noir);
     box-shadow: 0 6px 18px 0 rgba(0, 0, 18, 0.16);
 
     @include a-partir-de(lg) {
       grid-template-columns: auto 384px;
       grid-template-areas:
-        "titre illustration"
-        "contenu illustration"
-        "bouton illustration";
+        'titre illustration'
+        'contenu illustration'
+        'bouton illustration';
       gap: 24px;
     }
 
@@ -605,6 +606,41 @@ section {
 
     .bouton {
       padding: 8px;
+    }
+  }
+}
+
+.rappel-reponses {
+  padding-top: 24px;
+
+  h2 {
+    margin: 0 0 16px;
+    font-size: 1.5rem;
+    line-height: 2rem;
+  }
+
+  h3 {
+    margin: 24px 0 8px;
+    font-size: 1.125rem;
+    line-height: 1.75rem;
+  }
+
+  p {
+    color: #3a3a3a;
+  }
+
+  .reponses {
+    display: flex;
+    flex-direction: column;
+    @include a-partir-de(md) {
+      flex-direction: row;
+      flex-wrap: wrap;
+      column-gap: 24px;
+      row-gap: 32px;
+
+      .reponse {
+        flex: calc(50% - 12px);
+      }
     }
   }
 }
