--- a/front/_includes/header.html
+++ b/front/_includes/header.html
@@ -24,29 +24,7 @@
     
     <div id="zone-identification"></div>
 
-    <button class="ouverture-menu" id="menu-mobile-ouvrir">
-      <img src="/assets/images/icone-menu.svg" alt="Menu burger"/>
-    </button>
-
-    <nav class="menu-mobile invisible" id="menu-mobile">
-      <a class="fermer" id="menu-mobile-fermer">Fermer</a>
-      <div id="zone-identification-mobile"></div>
-      <div class="choix">
-        <a href="/" {% if page.url== '/' %} class="actif" {% endif %}>Accueil</a>
-        <a href="/catalogue/" {% if page.url== '/catalogue/' %} class="actif" {% endif %}>Explorer le catalogue complet</a>
-        <a href="/nis2/" {% if page.url== '/nis2/' %} class="actif" {% endif %}>Vous accompagner avec NIS2</a>
-        <details {% if page.url==
-        '/parcours-debuter/' or page.url == '/parcours-approfondir/' %}open {% endif %}>
-        <summary>Découvrir notre sélection</summary>
-        <a href="/parcours-debuter/" {% if page.url== '/parcours-debuter/' %} class="actif" {% endif %}>Les services pour
-        se lancer</a>
-        <a href="/parcours-approfondir/" {% if page.url== '/parcours-approfondir/' %} class="actif" {% endif
-        %}>Les services pour approfondir</a>
-        </details>
-        <a href="/test-maturite/" {% if page.url== '/test-maturite/' %} class="actif" {% endif %}>Tester votre maturité
-        cyber</a>
-      </div>
-    </nav>
+    <div id="menu-burger-mobile"></div>
   </div>
 </header>
 
