--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -157,145 +157,14 @@ header {
   }
 
   #zone-identification {
-    display: none;
-
-    @include a-partir-de(lg) {
-      display: block;
-    }
-
-    & {
       margin-left: auto;
-    }
   }
 
-  .ouverture-menu {
-    background: transparent;
-    cursor: pointer;
-    border: 1px solid #ddd;
-    width: 40px;
-    height: 40px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  #menu-burger-mobile {
     margin-left: auto;
 
     @include a-partir-de(lg) {
       display: none;
-    }
-
-    img {
-      width: 24px;
-      height: 24px;
-    }
-  }
-
-  .menu-mobile {
-    display: flex;
-    flex-direction: column;
-    position: fixed;
-    z-index: 11;
-    background: white;
-    width: calc(100% - 32px);
-    padding: 16px;
-    height: 100vh;
-    top: 0;
-    left: 0;
-
-    &.invisible {
-      display: none;
-    }
-
-    #menu-mobile-fermer {
-      align-self: flex-end;
-      color: #000091;
-
-      &:after {
-        content: '';
-        display: block;
-        width: 16px;
-        height: 16px;
-        background: url('/assets/images/icone-croix.svg') no-repeat;
-      }
-    }
-
-    #zone-identification-mobile {
-       border-bottom: 1px solid #dddddd;
-       padding-bottom: 12px;
-
-       #zone-identification {
-        display: block;
-        
-        .profil-connecte > span.libelle-profil {
-          display: none;
-        }
-       }
-    }
-
-    .choix {
-      display: flex;
-      flex-direction: column;
-      padding-top: 12px;
-
-      a, details {
-        font-weight: bold;
-        width: calc(100% - 32px);
-        border-bottom: 1px solid #dddddd;
-        padding: 12px 16px;
-
-        &.actif {
-          position: relative;
-
-          &:before {
-            content: '';
-            display: block;
-            width: 2px;
-            height: 24px;
-            left: 0;
-            background-color: var(--jaune-msc);
-            position: absolute;
-          }
-        }
-      }
-
-      details {
-        padding: 12px 16px;
-
-        &[open] summary:after {
-          transform: rotate(180deg);
-        }
-
-        &[open] summary {
-          margin-bottom: 8px;
-        }
-
-        summary {
-          font-weight: bold;
-          display: flex;
-          align-items: center;
-          justify-content: space-between;
-
-          &::marker {
-            content: '';
-          }
-
-          &::-webkit-details-marker {
-            display: none;
-          }
-
-          &:after {
-            content: '';
-            display: block;
-            width: 16px;
-            height: 16px;
-            background: url('/assets/images/icone-chevron-bas.svg');
-          }
-        }
-
-        a {
-          border-bottom: none;
-          font-weight: normal;
-        }
-      }
     }
   }
 }
