Retire le tag "Bêta" du header

--- a/front/_includes/header.html
+++ b/front/_includes/header.html
@@ -11,7 +11,7 @@
     <a href="/" class="titre-msc" aria-label="Retour à l’accueil">
       <img class="logo-anssi" src="/assets/images/logo-anssi.svg" alt="Logo ANSSI"/>
       <div class="titre-site">
-        <h1>MesServicesCyber <span class="beta">Bêta</span></h1>
+        <h1>MesServicesCyber</h1>
         <h2>Innovation ANSSI</h2>
       </div>
     </a>
