--- a/front/_includes/footer.html
+++ b/front/_includes/footer.html
@@ -31,6 +31,8 @@
       <hr/>
       <a href="#a" class="lien">Statistiques d'utilisation</a>
       <hr/>
+      <a href="/securite" class="lien">Sécurité</a>
+      <hr/>
       <a href="/accessibilite" class="lien">Accessibilité : non conforme</a>
     </div>
   </div>
