Ajoute le style de la page sécurité

--- a/front/assets/styles/page-statique.scss
+++ b/front/assets/styles/page-statique.scss
@@ -154,5 +154,29 @@
         }
       }
     }
+    img.encart-homologation {
+      width: 100%;
+
+      &.encart-tablette, &.encart-desktop {
+        display: none;
+      }
+
+      @include a-partir-de(sm) {
+        &.encart-tablette {
+          display: block;
+        }
+        &.encart-mobile {
+          display: none;
+        }
+      }
+      @include a-partir-de(lg) {
+        &.encart-desktop {
+          display: block;
+        }
+        &.encart-tablette, &.encart-mobile {
+          display: none;
+        }
+      }
+    }
   }
 }
