--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -22,6 +22,15 @@
   --erreur-texte: #ce0500;
 }
 
+:root {
+  --gouttiere: 16px;
+  --largeur-max-contenu: 1200px;
+
+  @include a-partir-de(lg) {
+    --gouttiere: 24px;
+  }
+}
+
 html {
   font-size: 16px;
   line-height: 24px;
