--- a/front/assets/styles/favoris.scss
+++ b/front/assets/styles/favoris.scss
@@ -4,6 +4,10 @@
 
 @use "../../assets/styles/responsive" as *;
 
+section {
+  padding: 32px var(--gouttiere);
+}
+
 #favoris {
   section {
     padding: 16px var(--gouttiere);
@@ -43,6 +47,37 @@
   .chapeau.fond-sombre .cta {
     align-self: center;
     grid-area: cta;
+  }
+
+  .banniere-partage-favoris {
+    background-color: #fef6e3;
+    border-radius: 8px;
+    padding: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 24px;
+    margin-bottom: 32px;
+
+    p {
+      font-weight: bold;
+      font-size: 1.125rem;
+      line-height: 1.75rem;
+      margin: 0;
+      padding: 0;
+    }
+
+    @include a-partir-de(sm) {
+      align-items: flex-start;
+    }
+
+    @include a-partir-de(lg) {
+      flex-direction: row;
+      button {
+        text-wrap: nowrap;
+      }
+    }
+
   }
 
 }
