--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -858,3 +858,10 @@ select {
 .erreur-champ-saisie:before {
   background-image: url('/assets/images/erreur.svg');
 }
+
+#bouton-favori {
+  img {
+    display: block;
+  }
+  float: right;
+}
