Ajoute la page de statistiques d'utilisation à l'état vide.

--- a/front/_includes/footer.html
+++ b/front/_includes/footer.html
@@ -29,7 +29,7 @@
       <hr/>
       <a href="/cgu" class="lien">Conditions générales</a>
       <hr/>
-      <a href="#a" class="lien">Statistiques d'utilisation</a>
+      <a href="/statistiques" class="lien">Statistiques d'utilisation</a>
       <hr/>
       <a href="/securite" class="lien">Sécurité</a>
       <hr/>
