Ordonne les items du catalogue sans filtre
...sur le besoin cyber.

--- a/front/_includes/script-donnees-json.html
+++ b/front/_includes/script-donnees-json.html
@@ -23,7 +23,8 @@
       "ETRE_SENSIBILISE": {% include tableau-json.html tableau=include.repartition.ETRE_SENSIBILISE %},
       "REAGIR": {% include tableau-json.html tableau=include.repartition.REAGIR %},
       "SE_FORMER": {% include tableau-json.html tableau=include.repartition.SE_FORMER %},
-      "SECURISER": {% include tableau-json.html tableau=include.repartition.SECURISER %}
+      "SECURISER": {% include tableau-json.html tableau=include.repartition.SECURISER %},
+      "TOUS": {% include tableau-json.html tableau=include.repartition.TOUS %}
     }
   }
 </script>
