--- a/front/assets/styles/test-maturite.scss
+++ b/front/assets/styles/test-maturite.scss
@@ -395,38 +395,6 @@ section {
     font-weight: bold;
     gap: 8px;
     position: relative;
-    opacity: 0;
-    animation: apparition 0.8s;
-    animation-fill-mode: forwards;
-
-    &:nth-child(1) {
-      animation-delay: 0.5s;
-    }
-
-    &:nth-child(2) {
-      animation-delay: 1s;
-    }
-
-    &:nth-child(3) {
-      animation-delay: 1.4s;
-    }
-
-    &:nth-child(4) {
-      animation-delay: 1.8s;
-    }
-
-    &:nth-child(5) {
-      animation-delay: 2.2s;
-    }
-
-    @keyframes apparition {
-      from {
-        opacity: 0;
-      }
-      to {
-        opacity: 100;
-      }
-    }
 
     .plante {
       order: 3;
@@ -477,6 +445,43 @@ section {
       border: 2px solid #0d0c21;
       left: 0;
       right: 0;
+    }
+  }
+
+  &.avec-animation {
+    .tuile-niveau {
+      opacity: 0;
+      animation: apparition 0.8s;
+      animation-fill-mode: forwards;
+
+      &:nth-child(1) {
+        animation-delay: 0.5s;
+      }
+
+      &:nth-child(2) {
+        animation-delay: 1s;
+      }
+
+      &:nth-child(3) {
+        animation-delay: 1.4s;
+      }
+
+      &:nth-child(4) {
+        animation-delay: 1.8s;
+      }
+
+      &:nth-child(5) {
+        animation-delay: 2.2s;
+      }
+
+      @keyframes apparition {
+        from {
+          opacity: 0;
+        }
+        to {
+          opacity: 100;
+        }
+      }
     }
   }
 }
