--- a/front/assets/styles/test-maturite.scss
+++ b/front/assets/styles/test-maturite.scss
@@ -387,7 +387,8 @@ section {
     border-radius: 8px;
     padding: 16px;
     background: #f6f6f6;
-    flex: 0 0 182px;
+    flex: 0 0 214px;
+    width: 214px;
     box-sizing: border-box;
     display: flex;
     flex-direction: column-reverse;
