Uniformise l’encart NIS2

--- a/front/_includes/encart-nis2.html
+++ b/front/_includes/encart-nis2.html
@@ -2,12 +2,12 @@
   <div class="contenu-section">
     <div class="carte nis2">
       <img
-              src="/assets/images/trouver-parcours.png"
+              src="/assets/images/directive-nis2.svg"
               alt="Découvrir les services pour les entités régulées NIS2"
       />
-      <h1>Votre entité est régulée NIS2 ?</h1>
-      <p>Découvrez tous les services accessibles aux entités regulées NIS2</p>
-      <a href="/nis2" class="bouton primaire">Découvrir</a>
+      <h1>Votre entité est régulée NIS2&nbsp;?</h1>
+      <p>Découvrez tous les services accessibles aux entités regulées NIS2.</p>
+      <a href="/nis2" class="bouton primaire">Découvrez les services</a>
     </div>
   </div>
 </section>
