--- a/front/_includes/encart-nis2.html
+++ b/front/_includes/encart-nis2.html
@@ -7,7 +7,7 @@
       />
       <h1>Votre entité est régulée NIS2&nbsp;?</h1>
       <p>Découvrez tous les services accessibles aux entités regulées NIS2.</p>
-      <a href="/nis2" class="bouton primaire">Découvrez les services</a>
+      <a href="/nis2" class="bouton primaire">Découvrir les services adaptés</a>
     </div>
   </div>
 </section>
