Supprime la marge non désirée sous l'illustration

--- a/front/_layouts/service.html
+++ b/front/_layouts/service.html
@@ -20,7 +20,7 @@ script: /scripts/service.js
         <p>{{page.description}}</p>
         <a href="{{page.lien}}" target="_blank" class="bouton primaire lien-externe-produit" data-source="Page produit" data-cible="{{page.nom}}">Accéder au service</a>
       </div>
-      <div>
+      <div class="conteneur-illustration">
         <img src="/assets/images/illustrations-services/{{ page.illustration }}" alt="Capture d’écran"/>
       </div>
     </div>
