--- a/front/assets/styles/service.scss
+++ b/front/assets/styles/service.scss
@@ -1,10 +1,10 @@
 ---
 ---
 
-@use "../../assets/styles/responsive" as *;
+@use '../../assets/styles/responsive' as *;
 
 .chapeau {
-  background: #f4f4f4 url("/assets/images/motif-fond-service.png");
+  background: #f4f4f4 url('/assets/images/motif-fond-service.png');
   padding: 24px var(--gouttiere);
 
   .contenu-section {
@@ -43,6 +43,11 @@
 
     @include a-partir-de(xxl) {
       flex-direction: row;
+    }
+
+    .conteneur-illustration {
+      display: flex;
+      flex-direction: column-reverse;
     }
 
     img {
@@ -271,9 +276,9 @@ h2 {
     }
 
     .illustration:after {
-      content: "";
+      content: '';
       position: absolute;
-      background: rgba(0, 0, 0, 0.35) url("/assets/images/icone-video.svg")
+      background: rgba(0, 0, 0, 0.35) url('/assets/images/icone-video.svg')
         no-repeat center;
       background-size: 60px 60px;
       border-top-left-radius: 8px;
@@ -347,8 +352,8 @@ h2 {
     border-bottom: 1px solid var(--noir);
 
     &:before {
-      content: "";
-      background: url("/assets/images/icone-fleche-pleine.svg");
+      content: '';
+      background: url('/assets/images/icone-fleche-pleine.svg');
       width: 16px;
       height: 16px;
       margin-left: auto;
