--- a/front/assets/styles/test-maturite.scss
+++ b/front/assets/styles/test-maturite.scss
@@ -577,6 +577,34 @@ section {
 .partage-test {
   padding: 24px var(--gouttiere);
 
+  &.fond-clair {
+    background-color: #f6f6f6;
+  }
+
+  &.fond-fonce {
+    background-color: #0d0c21;
+    color: white;
+
+    .bouton.secondaire {
+      background-color: rgba(255, 255, 255, 0);
+      color: white;
+      border-color: #353535;
+
+      img {
+        filter: invert(99%) sepia(1%) saturate(260%) hue-rotate(290deg) brightness(119%) contrast(100%);
+      }
+
+      &:hover {
+        background-color: rgba(255, 255, 255, 0.08);
+      }
+
+      &:active {
+        background-color: rgba(255, 255, 255, 0.16);
+      }
+    }
+
+  }
+
   .contenu-section {
     display: flex;
     flex-direction: column;
