--- a/front/_layouts/defaut.html
+++ b/front/_layouts/defaut.html
@@ -15,6 +15,8 @@
     <script type='module' src='/scripts/sentry.js' data-environnement="{{ site.env.SENTRY_ENVIRONNEMENT }}" data-dsn="{{ site.env.SENTRY_DSN }}" id='script-sentry'></script>
 {% endif %}
 
+<span nonce="%%NONCE%%"></span>
+
 <main>
     {% include header.html %}
     {{ content }}
