Affiche la suite cyber

--- a/front/_includes/header.html
+++ b/front/_includes/header.html
@@ -22,6 +22,8 @@
       src="/lib-svelte/dist/assets/identification.js"
     ></script>
     
+    <lab-anssi-bouton-suite-cyber-navigation></lab-anssi-bouton-suite-cyber-navigation>
+
     <div id="zone-identification"></div>
 
     <div id="menu-burger-mobile"></div>
