--- a/front/assets/styles/site.scss
+++ b/front/assets/styles/site.scss
@@ -907,3 +907,9 @@ select {
   position: relative;
   box-shadow: 0px 2px 6px 0px rgba(0, 0, 18, 0.16);
 }
+
+code {
+  background: rgba(0,0,0,.1);
+  padding-left: 3px;
+  padding-right: 3px;
+}
