[PARCOURS DEBUTER] Affiche l’encart diagnostic cyber
...à la place de l’encart NIS2

--- a/front/_includes/encart-cyberdepart.html
+++ b/front/_includes/encart-cyberdepart.html
@@ -1,6 +1,6 @@
 <section class="encart fond-{{ include.fond }}">
   <div class="contenu-section">
-    <div class="carte parcours">
+    <div class="carte parcours cyber-depart">
       <img
         src="/assets/images/dragon-kart.svg"
         alt="Illustration diagnostic cyber"
