[RESULTAT TEST] Affiche l’encart diagnostic cyber
...pour un résultat insuffisant

--- a/front/assets/styles/test-maturite.scss
+++ b/front/assets/styles/test-maturite.scss
@@ -502,6 +502,13 @@ section {
   }
 }
 
+.encart.fond-clair {
+  background: var(--jaune-msc) url('/assets/images/motif-fond-opacite-30.png');
+  .cyber-depart {
+    border-bottom-color: var(--noir);
+  }
+}
+
 .votre-parcours {
   background: var(--jaune-msc) url('/assets/images/motif-fond-opacite-30.png');
 
